question single view css

--- a/HTML/assets/less/mcq.less
+++ b/HTML/assets/less/mcq.less
@@ -57,6 +57,7 @@
 		word-break: break-word;
 		//display: inline-block;
 		overflow: hidden;
+		font-size: 22px;
 		&:focus{
 			outline: none;
 			border-bottom: 2px dashed @preview-grey;
