--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -64,25 +64,25 @@
   font-family: 'Indie Flower';
   font-style: normal;
   font-weight: 400;
-  src: local('Indie Flower'), local('IndieFlower'), url(../fonts/ChelseaMarket-Regular.eot) format('embedded-opentype');
-  src: local('Indie Flower'), local('IndieFlower'), url(../fonts/ChelseaMarket-Regular.ttf) format('True Type');
-  src: local('Indie Flower'), local('IndieFlower'), url(../fonts/ChelseaMarket-Regular.woff) format('woff');
+  src: local('Indie Flower'), local('IndieFlower'), url(../fonts/IndieFlower.eot) format('embedded-opentype');
+  src: local('Indie Flower'), local('IndieFlower'), url(../fonts/IndieFlower.ttf) format('True Type');
+  src: local('Indie Flower'), local('IndieFlower'), url(../fonts/IndieFlower.woff) format('woff');
 }
 @font-face {
   font-family: 'Just Another Hand';
   font-style: normal;
   font-weight: 400;
-  src: local('Just Another Hand'), local('JustAnotherHand-Regular'), url(../fonts/ChelseaMarket-Regular.eot) format('embedded-opentype');
-  src: local('Just Another Hand'), local('JustAnotherHand-Regular'), url(../fonts/ChelseaMarket-Regular.ttf) format('True Type');
-  src: local('Just Another Hand'), local('JustAnotherHand-Regular'), url(../fonts/ChelseaMarket-Regular.woff) format('woff');
+  src: local('Just Another Hand'), local('JustAnotherHand-Regular'), url(../fonts/JustAnotherHand.eot) format('embedded-opentype');
+  src: local('Just Another Hand'), local('JustAnotherHand-Regular'), url(../fonts/JustAnotherHand.ttf) format('True Type');
+  src: local('Just Another Hand'), local('JustAnotherHand-Regular'), url(../fonts/JustAnotherHand.woff) format('woff');
 }
 @font-face {
   font-family: 'Sacramento';
   font-style: normal;
   font-weight: 400;
-  src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/ChelseaMarket-Regular.eot) format('embedded-opentype');
-  src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/ChelseaMarket-Regular.ttf) format('True Type');
-  src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/ChelseaMarket-Regular.woff) format('woff');
+  src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.eot) format('embedded-opentype');
+  src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.ttf) format('True Type');
+  src: local('Sacramento'), local('Sacramento-Regular'), url(../fonts/Sacramento-Regular.woff) format('woff');
 }
 .creator {
   position: relative;
@@ -95,10 +95,9 @@
   height: 100%;
   position: relative;
   background-clip: content-box;
-  background: #ffffff;
 }
 .creator .row .column.empty-column {
-  background: url(../../../images/empty-drag-bg.svg) no-repeat center center #ffffff;
+  background: url(../../../images/empty-drag-bg.svg) no-repeat center center /*@color-white*/;
   background-clip: content-box;
   background-size: contain;
   min-height: 100px !important;
@@ -108,7 +107,6 @@
   padding: 0;
 }
 .creator .row .column .row {
-  margin: 0.5em;
   border: 1px solid transparent;
 }
 #site-page-content-region {
@@ -177,10 +175,14 @@
 #toolbox .qstns ul li {
   width: 96px;
   height: 40px;
-  font-weight: bold;
 }
 #toolbox .qstns ul li i {
   font-size: 17px;
+}
+#toolbox .qstns ul li .bicon {
+  font-size: 18px;
+  vertical-align: middle;
+  margin-right: 2px;
 }
 .dock {
   position: absolute;
@@ -212,26 +214,42 @@
 .docket ul li {
   float: left;
   border: 2px solid #e5e9ec;
-  width: 65px;
-  height: 65px;
+  background: #ffffff;
+  width: 92px;
+  height: 56px;
   margin: 4px;
   list-style-type: none;
   cursor: move;
   text-align: center;
   padding: 0;
-  padding-top: 3%;
+  padding-top: 5%;
 }
 .docket ul li a {
   cursor: move;
 }
-.docket ul li a:hover {
-  color: #0aa699;
-}
 .docket ul li i {
-  font-size: 42px;
+  font-size: 35px;
+}
+.docket ul li:hover {
+  background-color: #0aa699;
+  -webkit-transition: all 0.3s ease-out;
+  /* Chrome 1-25, Safari 3.2+ */
+
+  -moz-transition: all 0.3s ease-out;
+  /* Firefox 4-15 */
+
+  -o-transition: all 0.3s ease-out;
+  /* Opera 10.50–12.00 */
+
+  transition: all 0.3s ease-out;
+  /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
+
+}
+.docket ul li:hover a {
+  color: #ffffff;
 }
 .docket-body {
-  background: #ffffff;
+  background: #f3f3f3;
   padding: 15px 10px;
   color: #000;
 }
@@ -256,18 +274,23 @@
 }
 .textFormat {
   display: inline-block;
+  margin-left: 5px;
 }
-.textFormat .btn,
-.textFormat .btn:focus {
-  background-color: #d1dade;
+.textFormat .checkbox label {
+  margin-right: 0;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 0;
 }
-.textFormat .btn:hover,
-.textFormat .btn:active,
-.textFormat .btn.active,
-.textFormat .btn.disabled,
-.textFormat .btn[disabled] {
+.textFormat .checkbox label:before,
+.textFormat .checkbox label:after {
+  display: none;
+}
+.textFormat input[type=checkbox]:checked + label {
   background-color: #0aa699;
   color: #ffffff;
+  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
 }
 .minicolors-theme-default.minicolors {
   width: 60px;
@@ -276,6 +299,9 @@
 }
 .minicolors-swatch-color {
   border-radius: 5px;
+}
+.rotateCtrl {
+  display: inline-block;
 }
 .rotateCtrl > div {
   position: relative;
@@ -693,40 +719,38 @@
   font-size: 50px;
   color: #e5e9ec;
 }
-/*MCQ*/
-.mcq-option {
-  width: 172px;
-  margin-right: 10px;
-  float: left;
-  word-wrap: break-word;
-  border: 2px dashed #f3f3f3;
-  padding: 5px;
-  margin-bottom: 5px;
+/*Sort*/
+.sort-option {
+  cursor: move;
 }
-.mcq-option span {
-  float: left;
+/*Editor popup*/
+.cke_dialog_body .cke_dialog_title {
+  background-color: #0090d9;
+  background-image: none;
+  color: #ffffff;
+  text-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  padding: 10px;
 }
-.mcq-option .mcq-option-select {
-  float: left;
-  position: relative;
-  z-index: 2;
-  margin: 4px 5px 0;
-  background-size: 32px;
+.cke_dialog_body a.cke_dialog_ui_button {
+  background: #f35958;
+  color: #ffffff;
+  text-shadow: none;
+  border: none;
 }
-.mcq-option p {
-  margin: 0;
+.cke_dialog_body a.cke_dialog_ui_button:hover {
+  background: #f02a28;
 }
-.mcq-option p.placeholder {
-  color: #dfe4e8;
-  font-size: 15px;
-  font-weight: bold;
+.cke_dialog_body a.cke_dialog_ui_button span {
+  text-shadow: none;
 }
-#multiple-answer label {
-  margin-bottom: 10px;
-  margin-top: 5px;
+.cke_dialog_body a.cke_dialog_ui_button_ok {
+  background: #0090d9;
+  border: none;
 }
-#individual-marks-region input {
-  margin-bottom: 4px;
+.cke_dialog_body a.cke_dialog_ui_button_ok:hover {
+  background: #006ea6;
 }
 /*input[type=checkbox].mcq-option-select {
 	display:none;
@@ -765,14 +789,16 @@ p.mcq-option-text {
 	display: block;
 	//clear: left;
 	float: left;
-}*/input[type="text"].underline {
+}*/input[type="text"].underline,
+textarea.underline {
   text-decoration: none;
   background: url(../../../images/underline.gif) repeat-x 100% 100%;
   padding-bottom: 4px;
   white-space: nowrap;
   text-align: center;
 }
-input[type="text"].border {
+input[type="text"].border,
+textarea.border {
   text-align: center;
   border: 15px solid transparent;
   -webkit-border-image: url(../../../images/border.gif) 20 20 stretch;
@@ -782,6 +808,95 @@ input[type="text"].border {
   /* Opera */
 
   border-image: url(../../../images/border.gif) 20 20 stretch;
+}
+.style .select2-container {
+  width: 65%;
+}
+.colors .minicolors-theme-default.minicolors {
+  width: 30px;
+  height: 22px;
+  margin-right: 10px;
+}
+#mcq-container .element-wrapper {
+  border: none;
+  margin: 4px 0 0;
+}
+#mcq-container .element-wrapper .row .column.empty-column {
+  background: none;
+  min-height: 0 !important;
+}
+#mcq-container .element-wrapper .aj-imp-col-divider {
+  top: 0;
+  height: 45px;
+}
+#mcq-container .element-wrapper .aj-imp-col-divider p {
+  top: 16px;
+  left: -12px;
+  width: 25px;
+  height: 12px;
+}
+.mcq-option {
+  width: 100%;
+  padding: 5px;
+  min-height: 40px;
+}
+.mcq-option:before,
+.mcq-option:after {
+  content: " ";
+  display: table;
+}
+.mcq-option:after {
+  clear: both;
+}
+.mcq-option .mcq-option-select {
+  float: left;
+  z-index: 2;
+  margin: 4px 5px;
+  background-size: 32px;
+}
+.mcq-option p {
+  margin: 0;
+  word-break: break-word;
+  overflow: hidden;
+  font-size: 22px;
+}
+.mcq-option p:focus {
+  outline: none;
+  border-bottom: 2px dashed #f3f3f3;
+}
+.mcq-option p.placeholder {
+  color: #dfe4e8;
+  font-size: 18px;
+  font-weight: bold;
+  border: 2px dashed #f3f3f3;
+  padding-left: 4px;
+}
+#multiple-answer label {
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+.mcqProp .select2-container {
+  width: 100%;
+}
+#individual-marks-region input {
+  margin-bottom: 4px;
+}
+#individual-marks-region label {
+  text-align: right;
+  padding-top: 8px;
+}
+@media (max-width: 1024px) {
+  #site-page-content-region {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  #toolbox,
+  .dock.tiles {
+    display: none;
+  }
+}
+.hashtags {
+  font-size: 13px;
 }
 .listBox {
   margin-top: 60px;
