--- a/HTML/assets/less/fib.less
+++ b/HTML/assets/less/fib.less
@@ -31,3 +31,17 @@ input[type="text"], textarea{
 		margin-right: 10px;
 	}
 }
+
+.fib-text{
+	font-size: 22px;
+	margin-bottom: 0;
+	&:focus{
+			outline: none;
+			border-bottom: 2px dashed @preview-grey;
+		}
+	input[type="text"]{
+		margin: 0 8px;
+		vertical-align: text-bottom;
+		valign: text-bottom;
+	}
+}
