--- a/HTML/assets/less/mcq.less
+++ b/HTML/assets/less/mcq.less
@@ -3,6 +3,7 @@
 		//min-height: 100px;
 		border: none;
 		margin: 4px 0 0;
+		padding: 0 7px;
 		.row{
 			.column.empty-column{
 				background: none;
@@ -69,6 +70,12 @@
 		font-weight: bold;
 		border: 2px dashed @preview-grey;
 		padding-left: 4px;
+	}
+	.optionNo{
+		float: left;
+		padding-top: 6px;
+		padding-right: 2px;
+		font-size: 16px;
 	}
 }
 
