--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -45,7 +45,8 @@
 	//position: absolute;
 	left: 260px;
 	top: 0;
-	min-width: 760px;
+	max-width: 760px;
+	margin: 0 auto;
 	min-height: 500px !important;
 	padding: 15px 10px;
 
