mcq preview for single option selectable

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/mcq-property-box/templates/mcqpropview.html
@@ -41,11 +41,11 @@
 				<input id="marks" type="text" value="{{marks}}" class="form-control">
 			</div>
 
-			<div class="m-t-15">
+			<!-- <div class="m-t-15">
 				<div class="checkbox check-success">
 					<input id="check-ind-marks" type="checkbox" name="check-ind-marks"> <label for="check-ind-marks">Marks for individual options</label>
 				</div>
-			</div>
+			</div> -->
 
 			<div id="individual-marks-region"></div>
 		
