--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -28,7 +28,21 @@
 }
 
 .answrRight{
-	background: url(../../../images/underline.gif) no-repeat;
-	width: 25px;
-	height: 25px;
+	background: url(../../../images/answer.png) no-repeat;
+	width: 45px;
+	height: 34px;
+	background-position: 0 0;
+	float: left;
+	background-size: 78px 34px;
+	margin-left: 8px;
+}
+
+.answrWrong{
+	background: url(../../../images/answer.png) no-repeat;
+	width: 38px;
+	height: 34px;
+	background-position: -48px 0;
+	float: left;
+	background-size: 82px 34px;
+	margin-left: 8px;
 }
