navigating between questions in teaching module chorus options students sorting A-Z

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/single-question/chorus-options/templates/chorus-options-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/single-question/chorus-options/templates/chorus-options-template.html
@@ -1,28 +1,9 @@
-<div class="m-b-15 semi-bold pull-left row">
-	<div class="col-sm-6">
-		<label class="form-label bold">Class</label>
-		<select id="class" class="form-control select2" >
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-        </select>
-    </div>
-    <div class="col-sm-6">
-        <label class="form-label bold">Div</label>
-		<select id="div" class="form-control select2" >
-            <option value="A">A</option>
-            <option value="B">B</option>
-            <option value="C">C</option>
-        </select>
-    </div>
-</div>
-
-<div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10"><button type="button" class="btn btn-primary btn-xs btn-sm"><i class="fa fa-check"></i> Done </button></div>
+<div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10"><button id="question-done" type="button" class="btn btn-primary btn-xs btn-sm"><i class="fa fa-check"></i> Done </button></div>
 
 <div class="clearfix"></div>
 <div class="row students m-t-20">
 	<div class="col-sm-2 m-b-20">
-		<div class="row single tiles white no-margin">    
+		<div id="few" class="row single tiles white no-margin">    
             <div class="col-md-7 col-xs-7 no-padding">
               <div class="text-center">
                 <h4 class="text-primary no-margin p-t-15 p-l-5 p-r-5 p-b-20 semi-bold">Very<br/>Few</h4>
@@ -36,7 +17,7 @@
         </div>
 	</div>
 	<div class="col-sm-2 m-b-20">
-		<div class="row single tiles white no-margin">    
+		<div id="one-fourth" class="row single tiles white no-margin">    
             <div class="col-md-7 col-xs-7 no-padding">
               <div class="text-center">
                 <h4 class="text-primary no-margin p-t-15 p-b-20 p-l-5 p-r-5 semi-bold">1/4th of the Class</h4>
@@ -51,7 +32,7 @@
         </div>
 	</div>
 	<div class="col-sm-2 m-b-20">
-		<div class="row single tiles white no-margin">    
+		<div id="half" class="row single tiles white no-margin">    
             <div class="col-md-7 col-xs-7 no-padding">
               <div class="text-center">
                 <h4 class="text-primary no-margin p-t-15 p-b-20 p-l-5 p-r-5 semi-bold">Half the Class</h4>
@@ -66,7 +47,7 @@
         </div>
 	</div>
 	<div class="col-sm-2 m-b-20">
-		<div class="row single tiles white no-margin">    
+		<div id="three-fourth" class="row single tiles white no-margin">    
             <div class="col-md-7 col-xs-7 no-padding">
               <div class="text-center">
                 <h4 class="text-primary no-margin p-t-15 p-b-20 p-l-5 p-r-5 semi-bold">3/4 the Class </h4>
@@ -81,7 +62,7 @@
         </div>
 	</div>
 	<div class="col-sm-2 m-b-20">
-		<div class="row single tiles white no-margin">    
+		<div id="full" class="row single tiles white no-margin">    
             <div class="col-md-7 col-xs-7 no-padding">
               <div class="text-center">
                 <h4 class="text-primary no-margin p-t-15 p-b-20 p-l-5 p-r-5 semi-bold">Full<br/>Class</h4>
