fib creator marks modified

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
@@ -90,12 +90,9 @@
 
 			</div>
 
-			<div class="form-group">
+			<div class="m-b-10">
 				Marks
-				<select id="marks">
-					<option value="1">1</option>
-					<option value="2">2</option>	
-				</select>
+				<input id="marks" type="text" value="{{marks}}" class="form-control" disabled>
 			</div>
 
 			<div class="form-group style">
