--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -28,7 +28,7 @@
 	}
 }
 
-.answrRight{
+/*.answrRight{
 	background: url(../../../images/answer.png) no-repeat;
 	width: 45px;
 	height: 34px;
@@ -46,4 +46,4 @@
 	float: left;
 	background-size: 82px 34px;
 	margin-left: 8px;
-}
+}*/
