--- a/HTML/assets/less/fib.less
+++ b/HTML/assets/less/fib.less
@@ -1,23 +1,3 @@
-input[type="text"], textarea{
-	&.underline{
-		text-decoration: none; 
-		background: url(../../../images/underline.gif) repeat-x 100% 100%;
-		padding-bottom: 4px;
-		white-space: nowrap;
-		text-align: center;
-	}
-}
-
-input[type="text"], textarea{
-	&.border{
-		text-align: center;
-		border:15px solid transparent;
-		-webkit-border-image:url(../../../images/border.gif) 20 20 stretch; /* Safari 5 */
-		     -o-border-image:url(../../../images/border.gif) 20 20 stretch; /* Opera */
-				border-image:url(../../../images/border.gif) 20 20 stretch;
-	}
-}
-
 .style{
 	.select2-container{
 		width: 65%;
@@ -36,12 +16,53 @@ input[type="text"], textarea{
 	font-size: 22px;
 	margin-bottom: 0;
 	&:focus{
-			outline: none;
-			border-bottom: 2px dashed @preview-grey;
-		}
+		outline: none;
+		border-bottom: 2px dashed @preview-grey;
+	}
 	input[type="text"]{
 		margin: 0 8px;
+		padding: 0px 20px !important;
 		vertical-align: text-bottom;
 		valign: text-bottom;
+		text-align: center;
+		white-space: nowrap;
+		border: none;
+		height: auto;
+		min-height: inherit;
+		border-bottom: 4px solid @preview-grey;
+		&.underline{
+			background: url(../../../images/underline.gif) repeat-x 100% 100%;
+			border: none;
+		}
+
+		&.border{
+			border:15px solid transparent;
+			-webkit-border-image:url(../../../images/border.gif) 20 20 stretch; /* Safari 5 */
+			     -o-border-image:url(../../../images/border.gif) 20 20 stretch; /* Opera */
+					border-image:url(../../../images/border.gif) 20 20 stretch;
+		}
+
+		&.ansWrong{
+			opacity: 0.2;
+			background: url(../../../images/answer-wrong.png) no-repeat right center;
+			border: none;
+			border-bottom: 2px solid @color-danger;
+			background-size: 7%;
+			.ease;
+		}
+
+		&.ansRight{
+			background: url(../../../images/answer-right.png) no-repeat right center;
+			border: none;
+			border-bottom: 2px solid lighten(@color-success, 10%);
+			background-size: 10%;
+			.ease;
+		}
+	}
+}
+
+.fibRightAns{
+	.fibAns{
+		border-bottom: 2px solid @color-success;
 	}
 }
