preloading of questions collection, response collection etc on start training module, taking to next pending question

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display.html
@@ -4,7 +4,7 @@
 	    <span class="time">15 <span class="semi-bold">mins</span></span>
 	</time>
 	<div class="cbp_tmicon primary animated bounceIn"> <i class="fa fa-question"></i> </div>
-	<div class="cbp_tmlabel view done" style="cursor:auto">
+	<div class="cbp_tmlabel view" style="cursor:auto">
 		<div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
 		  <h4 class="m-t-5 m-b-5"><a class="text-success semi-bold">{{post_title}}</a> </h4>
 		</div>
