--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
@@ -1,6 +1,6 @@
 <div class="tiles white m-b-20">
 	<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
-		<h4 class="bold pull-left text-info modName"><i class="fa fa-chevron-left"></i> <a href="javascript://" onclick="history.back()">Back to {{name}}</a></h4>
+		<h4 class="bold pull-left text-info modName"><i class="fa fa-chevron-left"></i> <a id="back-to-module" href="javascript://">Back to {{name}}</a></h4>
 
 		<div class="modProgress pull-right">
 			<p class="bold small-text m-t-10 m-b-5">Progress</p>
