question_type custom post view answered questions in read only mode

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
@@ -68,11 +68,9 @@
 		<div class="col-sm-6">
 			<div class="timedisplay"></div>
 			
-			<button type="button" id="start-module" class="btn btn-white btn-small action pull-right m-t-10">
-				<i class="fa fa-play"></i> Start
-			</button> 
+			{{&startScheduleButton}}
 
-			<button type="button" class="btn btn-white btn-small pull-right m-t-10 m-r-10" data-toggle="modal" data-target="#schedule"><i class="fa fa-calendar"></i> Schedule</button>
+			
 		</div>
 	</div>
 </div>
