--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/chorus-options/templates/chorus-options-template.html
@@ -1,4 +1,8 @@
-<div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10"><button id="question-done" type="button" class="btn btn-primary btn-xs btn-sm"><i class="fa fa-check"></i> Done </button></div>
+<div class="m-t-10 well pull-right m-b-10 p-t-10 p-b-10">
+  <button type="button" id="question-done" class="btn btn-primary btn-xs btn-sm">
+    <i class="fa fa-forward"></i> Next Question 
+  </button>
+</div>
 
 <div class="clearfix"></div>
 <div class="row students m-t-20">
