sort preview css

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -6,6 +6,7 @@
 @import "checkbox.less";
 @import "fib.less";
 @import "mcq.less";
+@import "sort.less";
 @import "single-question.less";
 @import "chapters.less";
 @import "class.less";
