FIB marks, numbering, size

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
@@ -83,16 +83,20 @@
 			<div class="form-group">
         
 				<div class="textProp slider success">
-					Size 
+					Font Size 
 					<input type="text" id="fib-fontsize" class="fontSize" data-slider-max="30" data-slider-min="12" data-slider-step="1" data-slider-value="{{font_size}}" data-slider-orientation="horizontal" data-slider-selection="before">
 
 				</div>
 
 			</div>
 
+			<div class="checkbox check-success">
+				<input id="check-individual-marks" type="checkbox" name="check-individual-marks"> <label for="check-individual-marks">Enable Individual Marks</label>
+			</div>
+
 			<div class="m-b-10">
 				Marks
-				<input id="marks" type="text" value="{{marks}}" class="form-control" disabled>
+				<input id="marks" type="text" value="{{marks}}" class="form-control" >
 			</div>
 
 			<div class="form-group style">
