--- a/HTML/assets/less/fib.less
+++ b/HTML/assets/less/fib.less
@@ -19,8 +19,13 @@
 		outline: none;
 		border-bottom: 2px dashed @preview-grey;
 	}
+	.fibno{
+		font-size: 15px;
+		opacity: 0.5;
+		margin-left: 5px;
+	}
 	input[type="text"]{
-		margin: 0 8px;
+		margin: 0 8px 0 2px;
 		padding: 0px 20px !important;
 		vertical-align: text-bottom;
 		valign: text-bottom;
@@ -28,7 +33,7 @@
 		white-space: nowrap;
 		border: none;
 		height: auto;
-		min-height: inherit;
+		min-height: 30px;
 		border-bottom: 4px solid @preview-grey;
 		&.underline{
 			background: url(../../../images/underline.gif) repeat-x 100% 100%;
@@ -57,6 +62,10 @@
 			border-bottom: 2px solid lighten(@color-success, 10%);
 			background-size: 10%;
 			.ease;
+		}
+
+		&.active{
+			outline: 1px solid @color-success;
 		}
 	}
 }
