Content collection table and content meta table in config setup fetching and displaying names of all texbooks/chapters/sections/subsections

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/group-details/templates/group-details.html
@@ -41,7 +41,7 @@
 		<div class="col-md-4">
 		    <div class="margin-bottom-20 ">
 				<label class="form-label">Chapter</label>
-				{{showChapter}}
+				{{getChapterName}}
 			</div>
 		</div>											 
 	</div>
