--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
@@ -26,21 +26,21 @@
             </div>
             <div class="col-md-4 col-sm-4 b-grey b-r">
               <label class="form-label bold small-text">Textbook</label>
-				{{showTextbookName}}	English		                  
+				        {{getTextbookName}}		                  
             </div>
             <div class="col-md-4 col-sm-4">
               <label class="form-label bold small-text">Chapter</label>
-			         --
+			         {{getChapterName}}
             </div>
           </div>
           <div class="row">
             <div class="col-md-4 col-sm-4 b-grey b-r">
               <label class="form-label bold small-text">Section</label>
-				      --
+				      {{getSectionsNames}}
             </div>
             <div class="col-md-4 col-sm-4 b-grey b-r">
               <label class="form-label bold small-text">Sub-Section</label>
-				-			                  
+				      {{getSubSectionsNames}}
             </div>
             <div class="col-md-4 col-sm-4">
               <label class="form-label bold small-text">Type</label>
