division and class label for teacher training and teaching modules

--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/teacher-teaching-module/module-description/templates/module-description-template.html
@@ -22,7 +22,7 @@
 		  <div class="row m-b-10">
             <div class="col-md-4 col-sm-4 b-grey b-r">
               <label class="form-label bold small-text">Class</label>
-				4
+				      {{getClassOrDivision}}
             </div>
             <div class="col-md-4 col-sm-4 b-grey b-r">
               <label class="form-label bold small-text">Textbook</label>
