timer changes in html

--- a/HTML/assets/less/mcq.less
+++ b/HTML/assets/less/mcq.less
@@ -44,7 +44,7 @@
 		opacity: 0.2;
 		background: url(../../../images/answer-wrong.png) no-repeat right center;
 		border-bottom: 2px solid @color-danger;
-		background-size: 25px;
+		background-size: 35px;
 		.ease;
 	}
 	&.ansFalse{
@@ -54,7 +54,7 @@
 	}
 	&.ansRight{
 		background: url(../../../images/answer-right.png) no-repeat right center;
-		border-bottom: 2px solid lighten(@color-success, 10%);
+		border-bottom: 2px solid @color-success;
 		background-size: 35px;
 		.ease;
 	}
