--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -918,7 +918,7 @@ p.mcq-option-text {
   opacity: 0.2;
   background: url(../../../images/answer-wrong.png) no-repeat right center;
   border-bottom: 2px solid #f35958;
-  background-size: 25px;
+  background-size: 35px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
 
@@ -950,7 +950,7 @@ p.mcq-option-text {
 }
 .mcq-option.ansRight {
   background: url(../../../images/answer-right.png) no-repeat right center;
-  border-bottom: 2px solid #0dd6c5;
+  border-bottom: 2px solid #0aa699;
   background-size: 35px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
