Fib preview tick mark fix

--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/fib-property-box/templates/fibpropview.html
@@ -91,7 +91,7 @@
 			</div>
 
 			<div class="checkbox check-success">
-				<input id="check-individual-marks" type="checkbox" name="check-individual-marks"> <label for="check-individual-marks">Enable Individual Marks</label>
+				<input id="check-individual-marks" type="checkbox" name="check-individual-marks"> <label for="check-individual-marks">Set marks for each blank</label>
 			</div>
 
 			<div class="m-b-10">
