timer on single content piece

--- a/HTML/assets/less/fib.less
+++ b/HTML/assets/less/fib.less
@@ -48,19 +48,19 @@
 		}
 
 		&.ansWrong{
-			opacity: 0.2;
-			background: url(../../../images/answer-wrong.png) no-repeat right center;
+			//opacity: 0.2;
+			background: url(../../../images/wrong-ans.gif) no-repeat right center;
 			border: none;
 			border-bottom: 2px solid @color-danger;
-			background-size: 7%;
+			background-size: 25px;
 			.ease;
 		}
 
 		&.ansRight{
-			background: url(../../../images/answer-right.png) no-repeat right center;
+			background: url(../../../images/right-ans.gif) no-repeat right center;
 			border: none;
-			border-bottom: 2px solid lighten(@color-success, 10%);
-			background-size: 10%;
+			border-bottom: 2px solid @color-success;
+			background-size: 25px;
 			.ease;
 		}
 
