--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -192,4 +192,12 @@ textarea.error, .select2-choice.error {
 
 
 
-
+.example{
+	width: 190px;
+	//height: 100px;
+	//display: inline-block;
+	margin: 0 auto;
+	h4{
+		color: @color-white;
+	}
+}
