css change for tab portrait test

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -190,14 +190,6 @@ textarea.error, .select2-choice.error {
 	border:1px solid @color-danger !important;
 }
 
-
-
-.example{
-	width: 190px;
-	//height: 100px;
-	//display: inline-block;
-	margin: 0 auto;
-	h4{
-		color: @color-white;
-	}
+.page-content .content{
+	overflow: auto;
 }
