--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -3,6 +3,16 @@
 	font-size: 13px;
 }
 
+.cpTimer{
+	width: 190px;
+	//height: 100px;
+	margin: 0 auto;
+	h4{
+		color: @color-white;
+	}
+}
+
+
 #content-board{
 	margin-top: 30px;
 	.element-wrapper{
