creator sort minor style changes

--- a/HTML/assets/less/sort.less
+++ b/HTML/assets/less/sort.less
@@ -51,6 +51,14 @@
       border-bottom: 2px dashed @preview-grey;
     }
   }
+
+  p.placeholder{
+    color: darken(@body-bg, 2%);
+    font-size: 18px;
+    font-weight: bold;
+    border: 2px dashed @preview-grey;
+    padding-left: 4px;
+  }
 }
 .ui-state-highlight{
   background: @preview-grey;
