--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -191,5 +191,28 @@ textarea.error, .select2-choice.error {
 }
 
 .page-content .content{
-	overflow: auto;
+	//overflow-y: auto;
 }
+
+.mainLogo{
+	//background: url('../img/logo-synapse.png');
+	background: url(../../../images/logo-synapse.png);
+	width: 128px;
+	height: 128px;
+	margin: 0 auto;
+	background-size: 80%;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.smallLogo{
+	//background: url('../img/logo-synapse.png');
+	background: url(../../../images/logo-synapse.png);
+	width: 35px;
+	height: 35px;
+	margin: 0 auto;
+	background-size: 100%;
+	background-repeat: no-repeat;
+	background-position: left center;
+}
+
