--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1017,6 +1017,7 @@ p.mcq-option-text {
 .sort-option.ui-sortable-placeholder {
   visibility: visible!important;
   background: #f3f3f3;
+  height: 50px !important;
 }
 .sort-option.ui-sortable-placeholder.active {
   box-shadow: inset 0 0 200px #f3f3f3;
@@ -1032,10 +1033,11 @@ p.mcq-option-text {
 }
 .sort-option.ansWrong {
   opacity: 0.3;
-  background: url(../../../images/answer-wrong.png) no-repeat right center;
+  background: url(../../../images/wrong-ans.gif) no-repeat right center;
   border: none;
   border-bottom: 2px solid #f35958;
   background-size: 25px;
+  padding-right: 40px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
 
@@ -1050,10 +1052,11 @@ p.mcq-option-text {
 
 }
 .sort-option.ansRight {
-  background: url(../../../images/answer-right.png) no-repeat right center;
+  background: url(../../../images/right-ans.gif) no-repeat right center;
   border: none;
-  border-bottom: 2px solid #0dd6c5;
-  background-size: 35px;
+  border-bottom: 2px solid #0aa699;
+  background-size: 25px;
+  padding-right: 40px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
 
@@ -1472,6 +1475,21 @@ textarea.error,
 .select2-choice.error {
   border: 1px solid #f35958 !important;
 }
-.page-content .content {
-  overflow: auto;
+.mainLogo {
+  background: url(../../../images/logo-synapse.png);
+  width: 128px;
+  height: 128px;
+  margin: 0 auto;
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.smallLogo {
+  background: url(../../../images/logo-synapse.png);
+  width: 35px;
+  height: 35px;
+  margin: 0 auto;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: left center;
 }
