--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-creator/property-dock/hotspot-element-property-box/templates/optionview.html
@@ -12,12 +12,9 @@
 				<label for="no">No</label>
 			</div>
 
-			<div class="m-t-5">
+			<div class="m-b-10">
 				Marks
-				<select class="marks">
-					<option value="1">1</option>
-					<option value="2">2</option>
-				</select>
+				<input id="individual-marks" type="text" value="{{marks}}" class="form-control">
 			</div>
 
 			<div class="form-group inline m-t-20">
