changes to web login

--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -36,15 +36,16 @@
               <!--<div class="checkbox checkbox check-success"> 
                 <input type="checkbox" id="checkbox1" value="1">
                 <label for="checkbox1">Remember Me</label>
-              </div>
-              <a href="#">Trouble logging in?</a>-->
-              <p class=" m-b-5 bold">Login Type</p>
+              </div>-->
+              <a href="#">Trouble logging in?</a>
+
+              <!--<p class=" m-b-5 bold">Login Type</p>
               <div class="radio radio-success">
                 <input id="online" type="radio" name="optionyes" value="online">
                 <label for="online">Online</label>
                 <input id="offline" type="radio" name="optionyes" value="offline" checked="checked">
                 <label for="offline">Offline</label>
-              </div>
+              </div>-->
               
             </div>
         </div>
