minor style changes

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -8,6 +8,7 @@
 @import "mcq.less";
 @import "sort.less";
 @import "single-question.less";
+@import "textbook.less";
 @import "chapters.less";
 @import "class.less";
 @import "training.less";
@@ -68,47 +69,6 @@ body{
 
 		&> li > a:hover{
 			background-color: darken(@color-primary, 5%) !important;
-		}
-	}
-}
-
-#textbooks.list{
-	.list_header .meta{
-		margin-top: 0;
-		span{
-			margin-top: 0;
-			width: 15px;
-			&:after{
-				left:2px;
-			}
-		}
-	}	
-	.meta.name{
-		width: 30%;
-	}
-	.meta.area{
-		width: 15%;
-	}
-	.meta{
-		//width: 210px;
-		width: 20%;
-		padding: 0 2% 0 2%;
-		float: left;
-		}
-	.img_wrapper{
-		//width: 125px;
-		width: 40%;
-		float: left;
-		height: 65px;
-		margin-right: 10px;
-	}
-	.titles{
-		vertical-align: top;
-		width: 54%;
-		float: left;
-		word-break: break-word;
-		h2{
-			letter-spacing: 1px;
 		}
 	}
 }
@@ -215,4 +175,5 @@ textarea.error, .select2-choice.error {
 	background-repeat: no-repeat;
 	background-position: left center;
 }
+
 
