--- a/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/teachers-dashboard/dashboard/templates/teachers-dashboard.html
@@ -2,7 +2,7 @@
 </div>
 <div class="col-md-6">
 
-    <ul class="nav nav-pills" id="teacherOptns">
+    <ul class="nav nav-tabs" id="teacherOptns">
         <li class="active"><a href="#takeClass">Take a Class</a></li>
         <li class=""><a href="#training">Start Training</a></li>
         <li class=""><a href="#progress">Class Progress</a></li>
