--- a/HTML/assets/less/mcq.less
+++ b/HTML/assets/less/mcq.less
@@ -42,9 +42,9 @@
 	}
 	&.ansWrong{
 		opacity: 0.2;
-		background: url(../../../images/answer-wrong.png) no-repeat right center;
+		background: url(../../../images/wrong-ans.gif) no-repeat right center;
 		border-bottom: 2px solid @color-danger;
-		background-size: 35px;
+		background-size: 25px;
 		.ease;
 	}
 	&.ansFalse{
@@ -53,9 +53,9 @@
 		.ease;
 	}
 	&.ansRight{
-		background: url(../../../images/answer-right.png) no-repeat right center;
+		background: url(../../../images/right-ans.gif) no-repeat right center;
 		border-bottom: 2px solid @color-success;
-		background-size: 35px;
+		background-size: 25px;
 		.ease;
 	}
 	span{
