Show list of logged in users for walnut app

--- a/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
@@ -6,6 +6,7 @@
 	<!-- BEGIN ONE LEVEL MENU -->
 	
 	<!-- END ONE LEVEL MENU -->
+	<li><a id="user_logout" href="javascript://"><i class="fa fa-power-off"></i>&nbsp;&nbsp;Log Out</a></li>
 
 </ul>
 <!-- END SIDEBAR MENU -->
