--- a/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/header/templates/header.html
@@ -4,7 +4,7 @@
 		<!-- BEGIN NAVIGATION HEADER -->
 		<div class="header-seperation"> 
 			<!-- BEGIN MOBILE HEADER -->
-			<ul style="display:none" id="main-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
+			<ul style="display:block" id="main-menu-toggle-wrapper" class="nav pull-left notifcation-center">	
 				<li class="dropdown">
 					<a class="" href="#main-menu" id="main-menu-toggle">
 						<div class="iconset top-menu-toggle-white"></div>
@@ -21,7 +21,7 @@
 			<ul class="nav pull-right notifcation-center">	
 				
 				<!-- BEGIN MOBILE CHAT TOGGLER -->
-				<li style="display:none" id="portrait-chat-toggler" class="dropdown">
+				<li style="display:block" id="portrait-chat-toggler" class="dropdown">
 					<a class="chat-menu-toggle" href="#sidr">
 						<div class="iconset top-chat-white"></div>
 					</a>
