--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -4,11 +4,13 @@
 }
 
 .cpTimer{
-	width: 190px;
+	max-width: 190px;
 	//height: 100px;
-	margin: 0 auto;
-	h4{
-		color: @color-white;
+	margin: 10px auto 0;
+	.textDiv_Seconds{
+		span{
+			opacity: 0.3;
+		}
 	}
 }
 
