--- a/HTML/assets/less/textbook.less
+++ b/HTML/assets/less/textbook.less
@@ -1,6 +1,7 @@
 #textbooks.list{
 	.mix{
 		background-color: @preview-grey;
+		cursor: pointer;
 	}
 	.mix:nth-child(2n+1){
 		//background-color: @color-white;
