--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -915,9 +915,9 @@ p.mcq-option-text {
 }
 .mcq-option.ansWrong {
   opacity: 0.2;
-  background: url(../../../images/answer-wrong.png) no-repeat right center;
+  background: url(../../../images/wrong-ans.gif) no-repeat right center;
   border-bottom: 2px solid #f35958;
-  background-size: 35px;
+  background-size: 25px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
 
@@ -948,9 +948,9 @@ p.mcq-option-text {
 
 }
 .mcq-option.ansRight {
-  background: url(../../../images/answer-right.png) no-repeat right center;
+  background: url(../../../images/right-ans.gif) no-repeat right center;
   border-bottom: 2px solid #0aa699;
-  background-size: 35px;
+  background-size: 25px;
   -webkit-transition: all 0.3s ease-out;
   /* Chrome 1-25, Safari 3.2+ */
 
@@ -1099,11 +1099,11 @@ p.mcq-option-text {
   font-size: 13px;
 }
 .cpTimer {
-  width: 190px;
-  margin: 0 auto;
+  max-width: 190px;
+  margin: 10px auto 0;
 }
-.cpTimer h4 {
-  color: #ffffff;
+.cpTimer .textDiv_Seconds span {
+  opacity: 0.3;
 }
 #content-board {
   margin-top: 30px;
@@ -1139,6 +1139,49 @@ p.mcq-option-text {
 	background-size: 82px 34px;
 	margin-left: 8px;
 }*/
+#textbooks.list .mix {
+  background-color: #f3f3f3;
+  cursor: pointer;
+}
+#textbooks.list .mix:nth-child(2n+1) {
+  background-color: #fbfbfb;
+}
+#textbooks.list .list_header .meta {
+  margin-top: 0;
+}
+#textbooks.list .list_header .meta span {
+  margin-top: 0;
+  width: 15px;
+}
+#textbooks.list .list_header .meta span:after {
+  left: 2px;
+}
+#textbooks.list .meta.name {
+  width: 30%;
+}
+#textbooks.list .meta.area {
+  width: 15%;
+}
+#textbooks.list .meta {
+  width: 20%;
+  padding: 0 2% 0 2%;
+  float: left;
+}
+#textbooks.list .img_wrapper {
+  width: 40%;
+  float: left;
+  height: 65px;
+  margin-right: 10px;
+}
+#textbooks.list .titles {
+  vertical-align: top;
+  width: 54%;
+  float: left;
+  word-break: break-word;
+}
+#textbooks.list .titles h2 {
+  letter-spacing: 1px;
+}
 .listBox {
   margin-top: 60px;
 }
@@ -1241,9 +1284,6 @@ h3.time {
     *width: 20%;
   }
 }
-#myCanvas-miki .cbp_tmlabel {
-  cursor: pointer;
-}
 #myCanvas-miki .cbp_tmlabel a {
   color: #0aa699;
 }
@@ -1289,7 +1329,7 @@ h3.time {
   top: auto;
 }
 #myCanvas-miki .cbp_tmtimeline > li .cbp_tmlabel.view {
-  cursor: default;
+  cursor: pointer;
 }
 #myCanvas-miki .cbp_tmtimeline > li .cbp_tmlabel.done:after {
   border-right-color: #f3f3f3;
@@ -1363,42 +1403,6 @@ body {
 }
 .page-sidebar .page-sidebar-wrapper > ul > li > ul.sub-menu > li > a:hover {
   background-color: #098e83 !important;
-}
-#textbooks.list .list_header .meta {
-  margin-top: 0;
-}
-#textbooks.list .list_header .meta span {
-  margin-top: 0;
-  width: 15px;
-}
-#textbooks.list .list_header .meta span:after {
-  left: 2px;
-}
-#textbooks.list .meta.name {
-  width: 30%;
-}
-#textbooks.list .meta.area {
-  width: 15%;
-}
-#textbooks.list .meta {
-  width: 20%;
-  padding: 0 2% 0 2%;
-  float: left;
-}
-#textbooks.list .img_wrapper {
-  width: 40%;
-  float: left;
-  height: 65px;
-  margin-right: 10px;
-}
-#textbooks.list .titles {
-  vertical-align: top;
-  width: 54%;
-  float: left;
-  word-break: break-word;
-}
-#textbooks.list .titles h2 {
-  letter-spacing: 1px;
 }
 tbody.rowlink td {
   cursor: pointer;
@@ -1476,7 +1480,7 @@ textarea.error,
   border: 1px solid #f35958 !important;
 }
 .mainLogo {
-  background: url('../img/logo-synapse.png');
+  background: url(../../../images/logo-synapse.png);
   width: 128px;
   height: 128px;
   margin: 0 auto;
@@ -1485,7 +1489,7 @@ textarea.error,
   background-position: center;
 }
 .smallLogo {
-  background: url('../img/logo-synapse.png');
+  background: url(../../../images/logo-synapse.png);
   width: 35px;
   height: 35px;
   margin: 0 auto;
