--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -155,14 +155,16 @@ textarea.error, .select2-choice.error {
 }
 
 .mainLogo{
-	//background: url('../img/logo-synapse.png');
-	background: url(../../../images/logo-synapse.png);
-	width: 128px;
-	height: 128px;
-	margin: 0 auto;
+	//background: url(../../../images/logo-synapse.png);
 	background-size: 80%;
 	background-repeat: no-repeat;
 	background-position: center;
+	img{
+		width: 128px;
+		height: 128px;
+		margin: 0 auto;
+		display: block;
+	}
 }
 
 .smallLogo{
