add question views

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -62,7 +62,7 @@
 	width: 220px;
 	background: @preview-grey;
 	position: absolute;
-	z-index: 2;
+	//z-index: 2;
 	//padding: 15px 10px;
 	.tools, .qstns{
 		padding: 0 10px 20px;
