--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -3,6 +3,7 @@
 @import "mixins.less";
 @import "fonts.less";
 @import "builder.less";
+@import "mashmenu.less";
 @import "checkbox.less";
 @import "fib.less";
 @import "mcq.less";
