Download school logo

--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/app-login/templates/applogin.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/app-login/templates/applogin.html
@@ -2,7 +2,7 @@
         </div>
         <div class="col-md-6">
           <div class="well">
-          <div class="mainLogo"></div>
+          <div class="mainLogo"><img id="logo" src=""></div>
            <h3 class="text-center m-b-25">Choose an Account</h3>
             <div id="loginAccounts"></div>
 
