--- a/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/login/templates/login.html
@@ -5,7 +5,7 @@
     </div>
     <div class="col-md-6">
       <div class="well">
-        <div class="mainLogo"></div>
+        <div class="mainLogo"><img id="logo" src=""></div>
         <!--<h2>Sign in to <span class="schoolName">School Name</span></h2>-->
 		  <form id="login-form" class="login-form" action="" method="post" novalidate="novalidate">
   		 <div class="row">
@@ -39,13 +39,13 @@
               </div>-->
               <a href="#">Trouble logging in?</a>
 
-              <!--<p class=" m-b-5 bold">Login Type</p>
+              <p class=" m-b-5 bold">Login Type</p>
               <div class="radio radio-success">
                 <input id="online" type="radio" name="optionyes" value="online">
                 <label for="online">Online</label>
                 <input id="offline" type="radio" name="optionyes" value="offline" checked="checked">
                 <label for="offline">Offline</label>
-              </div>-->
+              </div>
               
             </div>
         </div>
