--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-group/view-group/content-display/templates/content-display.html
@@ -1,17 +1,26 @@
+<div class="row p-r-10">
+    <div class="col-sm-4">
 
-<div class="contentPiece" data-id="{{ID}}">
-	<time class="cbp_tmtime" datetime="">
-	    <span class="time">15 <span class="semi-bold">mins</span></span>
-	</time>
-	<div class="cbp_tmicon primary animated bounceIn"> <i class="fa fa-question"></i> </div>
-	<div class="cbp_tmlabel view" style="cursor:auto">
-		<div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
-		  <h4 class="m-t-5 m-b-5"><a class="text-success semi-bold question_link">{{post_title}}</a> </h4>
-		</div>
-		<div class="clearfix"></div>
-		<div class="tiles grey p-t-10 p-b-10 p-l-20">
-		   	<div class="muted">Tag one, Tag two, Tag three</div>
-		  	<div class="clearfix"></div>
-		</div>
-	</div>
+        <div class="tiles added-margin">
+            <div class="tiles-body">
+                <div class="tiles-title"> TRAINING MODULE TIME </div>
+                <div class="heading"> <span class="animate-number" data-animation-duration="1200">{{total_minutes}} mins</span> </div>
+            </div>
+        </div>
+
+    </div>
+    <div class="col-sm-4">
+
+    </div>
+    <div class="col-sm-4">
+
+        <div class="tiles white added-margin">
+            <div class="tiles-body">
+                <div class="tiles-title"> ELAPSED MODULE TIME </div>
+                <div class="heading"> <span class="animate-number" data-animation-duration="1200">{{showElapsedTime}} mins</span> </div>
+            </div>
+        </div>
+
+    </div>
 </div>
+<div id="myCanvas-miki" class="col-md-10"><ul class="cbp_tmtimeline"></ul></div>
