--- a/HTML/assets/less/mashmenu.less
+++ b/HTML/assets/less/mashmenu.less
@@ -1,4 +1,4 @@
-div.Dmenu {
+/*div.Dmenu {
     background: none repeat scroll 0 0 @color-info;
     //border-bottom: 1px solid #DCE5EE;
     //border-top: 1px solid #DCE5EE;
@@ -12,17 +12,24 @@ div.Dmenu {
     a {
         text-decoration:none;
     }
-    div.mainCat {
+    ul{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: inline-block;
+        vertical-align: top;
+    }
+    li.mainCat {
         border-left:2px solid transparent;
         border-right:2px solid transparent;
-        border-top:2px solid transparent;
+        border-top:4px solid transparent;
         float:left;
         transition: all 0.1s ease 0s;
         div.allContent {
-            background-color:#FFF;
+            background-color:@preview-grey;
             //border:2px solid #DDF0F9;
             box-shadow:0 2px 3px rgba(0, 0, 0, 0.3);
-            display:none;
+            display:block;
             max-height:350px;
             position:absolute;
             top:38px;
@@ -32,8 +39,8 @@ div.Dmenu {
             border-radius: 0 0 3px 3px;
             div.menuItems {
                 float:left;
-                width:900px;
-                margin:10px 0 1px 20px;
+                width:100%;
+                margin:0px 0 1px 0;
                 color:#000;
             }
             a.slink {
@@ -116,18 +123,21 @@ div.Dmenu {
             }
         }
     }
-    div.mainCat:hover {
-        background:none repeat scroll 0 0 #DDF0F9;
+    li.mainCat:hover {
+        background:none repeat scroll 0 0 @color-white;
         a {
             color:#2AA4CF;
         }
-        div.allContent {
-            display:block;
-        }
     }
-    a.flink:hover {
-        background-color:#DDF0F9;
-        border:medium none;
-        color:#2AA4CF;
+    
+}*/
+
+#subProps{
+    //background-color: @color-info;
+    -webkit-border-radius: 4px;
+       -moz-border-radius: 4px;
+            border-radius: 4px;
+    & > li > a{
+        //color: @color-white;
     }
 }
