builder html css changes

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -128,7 +128,7 @@
 	.builder_actions{
 		background: @body-bg;
 		padding-bottom: 15px;
-		margin-top: -48px;
+		//margin-top: -48px;
 	}
 
 	.btn-cons2{
