single question view changes, module view changes

--- a/HTML/assets/less/module.less
+++ b/HTML/assets/less/module.less
@@ -59,5 +59,11 @@
 		.cbp_tmlabel.done:after{
 			border-right-color: @preview-grey;
 		}
+
+		.qstnStatus{
+			position: absolute;
+			right: -140px;
+			top: 12px;
+		}
 	}
 }
