--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -1241,6 +1241,17 @@ p.mcq-option-text {
 .cpTimer .textDiv_Seconds span {
   opacity: 0.3;
 }
+.modInfo,
+.qstnInfo {
+  cursor: pointer;
+}
+.qstnStatus {
+  color: #0aa699;
+  font-size: 20px;
+}
+.qstnStatus i {
+  font-size: 22px;
+}
 #content-board {
   margin-top: 30px;
 }
@@ -1469,6 +1480,11 @@ h3.time {
 }
 #myCanvas-miki .cbp_tmtimeline > li .cbp_tmlabel.done:after {
   border-right-color: #f3f3f3;
+}
+#myCanvas-miki .cbp_tmtimeline > li .qstnStatus {
+  position: absolute;
+  right: -140px;
+  top: 12px;
 }
 /*Take Class*/
 #textbooks.list.takeClass .meta.name {
