--- a/HTML/assets/less/single-question.less
+++ b/HTML/assets/less/single-question.less
@@ -14,6 +14,17 @@
 	}
 }
 
+.modInfo, .qstnInfo{
+	cursor: pointer;
+}
+
+.qstnStatus{
+	color: @color-success;
+	font-size: 20px;
+	i{
+		font-size: 22px;
+	}
+}
 
 #content-board{
 	margin-top: 30px;
