--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -1241,6 +1241,9 @@ p.mcq-option-text {
 .cpTimer .textDiv_Seconds span {
   opacity: 0.3;
 }
+.qstnStatus {
+  color: #0aa699;
+}
 #content-board {
   margin-top: 30px;
 }
